--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-uglify-es": "^2.0.0",
+    "gulp-wait": "0.0.2",
     "rename": "^1.0.4"
   }
 }
